<resources>
    <string name="video_call_appname">SynChat</string>
    <string name="file_provider">.file.provider</string>
    <string name="unmute_dialog_text1">"New status updates from "</string>
    <string name="unmute_dialog_text2">" Will appear at the top of the status list"</string>
    <string name="mute_dialog_text1">"New status updates from "</string>
    <string name="mute_dialog_text2">" won\'t appear at the top of the status list anymore"</string>
    <string name="lbl_audio">Audio</string>
    <string name="app_name">SynChat</string>
    <string name="notification_camera_icon" translatable="false">📷</string>
    <string name="notification_audio_icon" translatable="false">🎧</string>
    <string name="notification_video_icon" translatable="false">🎥</string>
    <string name="notification_document_icon" translatable="false">☰</string>
    <string name="notification_location_icon" translatable="false">🗺</string>
    <string name="notification_text_icon" translatable="false">✉</string>
    <string name="device_id">Enter your IMEI number</string>
    <string name="enter_current_pin">Enter Current PIN</string>
    <string name="enter_pin">Enter PIN</string>
    <string name="enter_new_pin">Enter New PIN</string>
    <string name="confirm_pin">Confirm PIN</string>
    <string name="wrong_pin">Incorrect PIN</string>
    <string name="search">Search&#8230;</string>
    <string name="splash_text">SynChat ? would like to access your friends contacts in order to find your friends whoever using this application so you can enjoy wats Message experience as quickly as possible</string>
    <string name="verify_phone_text">SynChat Messenger will send a one time SMS message to verify your phone number Carrier SMS charges may apply</string>
    <string name="verify_confirm_text">Please confirm your country code and enter your phone number</string>
    <string name="no_chat_msg">No Chats</string>
    <string name="no_call_msg">No Calls</string>
    <string name="default_user_status">Hey there! I am using SynChat</string>
    <string name="btn_agree_txt">Agree</string>
    <string name="btn_reject_txt">Reject</string>
    <string name="verify_phone_number_txt">Verify Phone Number</string>
    <string name="enter_valid_no_txt">Enter valid number</string>
    <string name="pls_accept_terms_txt">Please Accept Terms and Conditions</string>
    <string name="edit_txt">Edit</string>
    <string name="waiting4sms">Waiting to automatically detect an SMS sent to</string>
    <string name="sms_verification_text">Sms verification</string>
    <string name="appSetting">App Setting</string>
    <string name="reGrantPermissionMsg">You have denied the required permission(s). Please, grant to proceed further.</string>
    <string name="check_internet_connection">Please check your internet connection and try again!</string>
    <string name="login_failed">Login failed !</string>
    <string name="login_label">Login</string>
    <string name="profile_pic">Please provide your name and \n an optional profile photo</string>
    <string name="profile_info">Profile info</string>
    <string name="welcome_title">Welcome</string>
    <string name="Next">Next</string>
    <string name="Continue">Continue</string>
    <string name="cancle">Cancel</string>
    <string name="ok">Ok</string>
    <string name="retry">Retry</string>
    <string name="happy_face">Happy face</string>
    <string name="scan_code"></string>
    <string name="current_status">Your current status</string>
    <string name="select_status">Select your new status</string>
    <string name="menu_web_title">SynChat Web</string>
    <string name="name_and_status">Name &amp; Status</string>
    <string name="txt_calling">To start calling who have SynChat, Tap on calling Button on The Top Of The Screen</string>
    <string name="pref_videocodec_key">videocodec_preference</string>
    <string name="pref_videocodec_title">Default video codec.</string>
    <string name="pref_videocodec_dlg">Select default video codec.</string>
    <string name="pref_videocodec_default">VP8</string>
    <string name="aboutnew_messager">SynChat Messenger</string>
    <string name="aboutnew_Inc"> \u00a9 2017 SynChat Inc</string>
    <string name="pref_audiocodec_key">audiocodec_preference</string>
    <string name="pref_audiocodec_title">Default audio codec.</string>
    <string name="pref_audiocodec_dlg">Select default audio codec.</string>
    <string name="pref_audiocodec_default">OPUS</string>
    <string name="pref_hwcodec_key">hwcodec_preference</string>
    <string name="pref_hwcodec_title">Video codec hardware acceleration.</string>
    <string name="pref_hwcodec_dlg">Use hardware accelerated video codec (if available).</string>
    <string name="pref_hwcodec_default">true</string>
    <string name="pref_capturetotexture_key">capturetotexture_preference</string>
    <string name="pref_capturetotexture_title">Video capture to surface texture.</string>
    <string name="pref_capturetotexture_dlg">Capture video to textures (if available).</string>
    <string name="pref_capturetotexture_default">false</string>
    <string name="pref_noaudioprocessing_key">audioprocessing_preference</string>
    <string name="pref_noaudioprocessing_title">Disable audio processing.</string>
    <string name="pref_noaudioprocessing_dlg">Disable audio processing pipeline.</string>
    <string name="pref_noaudioprocessing_default">false</string>
    <string name="pref_aecdump_key">aecdump_preference</string>
    <string name="pref_aecdump_title">Create aecdump.</string>
    <string name="pref_aecdump_dlg">Enable diagnostic audio recordings.</string>
    <string name="pref_aecdump_default">false</string>
    <string name="pref_opensles_key">opensles_preference</string>
    <string name="pref_opensles_title">Use OpenSL ES for audio playback.</string>
    <string name="pref_opensles_dlg">Use OpenSL ES for audio playback.</string>
    <string name="pref_opensles_default">false</string>
    <string name="pref_resolution_key">resolution_preference</string>
    <string name="pref_resolution_title">Video resolution.</string>
    <string name="pref_resolution_dlg">Enter AppRTC local video resolution.</string>
    <string name="pref_resolution_default">Default</string>
    <string name="pref_fps_key">fps_preference</string>
    <string name="pref_fps_title">Camera fps.</string>
    <string name="pref_fps_dlg">Enter local camera fps.</string>
    <string name="pref_fps_default">Default</string>
    <string name="pref_capturequalityslider_key">capturequalityslider_preference</string>
    <string name="pref_capturequalityslider_title">Capture quality slider.</string>
    <string name="pref_capturequalityslider_dlg">Enable slider for changing capture quality.</string>
    <string name="pref_capturequalityslider_default">false</string>
    <string name="pref_startvideobitrate_key">startvideobitrate_preference</string>
    <string name="pref_startvideobitrate_title">Start video bitrate setting.</string>
    <string name="pref_startvideobitrate_dlg">Start video bitrate setting.</string>
    <string name="pref_startvideobitrate_default">Default</string>
    <string name="pref_startvideobitratevalue_key">startvideobitratevalue_preference</string>
    <string name="pref_startvideobitratevalue_title">Video encoder start bitrate.</string>
    <string name="pref_startvideobitratevalue_dlg">Enter video encoder start bitrate in kbps.</string>
    <string name="pref_startvideobitratevalue_default">1000</string>
    <string name="pref_startaudiobitrate_key">startaudiobitrate_preference</string>
    <string name="pref_startaudiobitrate_title">Audio bitrate setting.</string>
    <string name="pref_startaudiobitrate_dlg">Audio bitrate setting.</string>
    <string name="pref_startaudiobitrate_default">Default</string>
    <string name="pref_startaudiobitratevalue_key">startaudiobitratevalue_preference</string>
    <string name="pref_startaudiobitratevalue_title">Audio codec bitrate.</string>
    <string name="pref_startaudiobitratevalue_dlg">Enter audio codec bitrate in kbps.</string>
    <string name="pref_startaudiobitratevalue_default">32</string>
    <string name="pref_displayhud_key">displayhud_preference</string>
    <string name="pref_displayhud_title">Display call statistics.</string>
    <string name="pref_displayhud_dlg">Display call statistics.</string>
    <string name="pref_displayhud_default" translatable="false">false</string>
    <string name="pref_tracing_key">tracing_preference</string>
    <string name="pref_tracing_title">Debug performance tracing.</string>
    <string name="pref_tracing_dlg">Debug performance tracing.</string>
    <string name="pref_tracing_default" translatable="false">false</string>
    <string name="pref_room_server_url_key">room_server_url_preference</string>
    <string name="pref_room_server_url_title">Room server URL.</string>
    <string name="pref_room_server_url_dlg">Enter a room server URL.</string>
    <string name="pref_room_server_url_default" translatable="false">http://syncchat.in:4400</string>
    <string name="pref_miscsettings_key">misc_settings_key</string>
    <string name="pref_miscsettings_title">Miscellaneous settings.</string>
    <string name="pref_audiosettings_key">audio_settings_key</string>
    <string name="pref_audiosettings_title">WebRTC audio settings.</string>
    <string name="pref_videosettings_key">video_settings_key</string>
    <string name="pref_videosettings_title">WebRTC video settings.</string>
    <string name="pref_videocall_key">videocall_preference</string>
    <string name="pref_videocall_title">Video call.</string>
    <string name="pref_videocall_dlg">Enable video in a call.</string>
    <string name="pref_videocall_default">true</string>
    <string name="missing_url">FATAL ERROR: Missing URL to connect to.</string>
    <string name="connecting_to">Connecting to: %1$s</string>
    <string name="search_hint">Search..</string>
    <string name="action_settings">Settings</string>
    <string name="notification_title">SynChat</string>
    <string name="no_contacts">No Contacts</string>
    <string name="alphabet">ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="search_match_other">Matches Other Field</string>
    <string name="nav_drawer_item_home">Home</string>
    <string name="nav_drawer_item_explore">Explore</string>
    <string name="nav_drawer_help_and_feedback"><![CDATA[Help & feedback]]></string>
    <string name="chat_restore_msg">Restore your chat history from Google Drive. If you don\'t restore now, you won\'t be able to restore later.</string>
    <string name="gmail_id">gmail-id</string>
    <string name="backup_time">backup-time</string>
    <string name="size">size</string>
    <string name="Skip">Skip</string>
    <string name="Vibrate">Vibrate</string>
    <string name="Off">Off</string>
    <string name="name">Name</string>
    <string name="phone_number">phone number</string>
    <string name="save">Save</string>
    <string name="Font_Size">Font size:</string>
    <string name="Default">Default</string>
    <string name="Short">Short</string>
    <string name="Long">Long</string>
    <string name="Document">Document</string>
    <string name="Video">Video</string>
    <string name="Audio">Audio</string>
    <string name="Small">Small</string>
    <string name="Medium">Medium</string>
    <string name="Large">Large</string>
    <string name="When_Using_Mobile_Data">When Using Mobile Data</string>
    <string name="Photo">Photo</string>
    <string name="cancel">Cancel</string>
    <string name="hours_8">8 hours</string>
    <string name="one_week">1 week</string>
    <string name="year_one">1 year</string>
    <string name="mute_nptification_txt">Show notifications</string>
    <string name="Verification_Successful">Verification Successful</string>
    <string name="start_chat">You can start the chat</string>
    <string name="enter_chat">ENTER CHAT</string>
</resources>