<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.chatapp.synchat.app.widget.AvnNextLTProRegEditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:hint="@string/name"
        android:layout_margin="10dp"
        android:layout_height="wrap_content" />

    <com.chatapp.synchat.app.widget.AvnNextLTProRegEditText
        android:id="@+id/phoneNumber"
        android:layout_below="@+id/name"
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:inputType="phone"
        android:hint="@string/phone_number"
        android:layout_height="wrap_content" />


    <LinearLayout
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.chatapp.synchat.app.widget.AvnNextLTProDemiButton
            android:id="@+id/save"
            android:layout_width="fill_parent"
            android:layout_weight="1"
            android:text="@string/save"
            android:layout_height="wrap_content" />

        <com.chatapp.synchat.app.widget.AvnNextLTProDemiButton
            android:id="@+id/cancel"
            android:layout_weight="1"
            android:layout_width="fill_parent"
            android:text="@string/cancle"
            android:layout_height="wrap_content" />
    </LinearLayout>

</RelativeLayout>