<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/verification_dialog_border"
    android:orientation="vertical"
    android:padding="20dp">

    <ImageView
        android:id="@+id/correct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:src="@drawable/correct_verify" />

    <com.chatapp.synchat.app.widget.AvnNextLTProDemiTextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/correct"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/Verification_Successful"
        android:textColor="@color/black"
        android:textSize="17sp" />

    <com.chatapp.synchat.app.widget.AvnNextLTProDemiTextView
        android:id="@+id/subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/start_chat"
        android:textColor="@color/lblFromName"
        android:textSize="14sp" />

    <com.chatapp.synchat.app.widget.AvnNextLTProDemiTextView
        android:id="@+id/enterchat"
        android:layout_width="150dp"
        android:layout_marginBottom="50dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/subtitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_enterchat"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/enter_chat"
        android:textColor="@color/white"
        android:textSize="12sp" />


</RelativeLayout>